apps/data-science/airflow/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Data Pipeline Orchestration
    gethomepage.dev/group: Data Science
    gethomepage.dev/icon: https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/AirflowLogo.png/640px-AirflowLogo.png
    gethomepage.dev/name: Apache Airflow
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  rules:
    - host: airflow.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-api-server
                port:
                  number: 8080
  tls:
    - hosts:
        - airflow.internal
      secretName: homelab-tls
